# counting-context

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.claude/: settings.local.json
backend/: api.py  buckets.py  cli.py  db.py  mcp_server.py  scheduler.py  scraper.py  states.py
data/: results.db
frontend/: app.js  index.html  styles.css
